--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
 
         </div>
         <div class="line_chart_part">
+            <h2>
+                Comparison
+            </h2>
             <div class = "line_chart">
                  <div id="line_chart"></div>
         
